--- a/app/src/main/res/layout/detail_cardview.xml
+++ b/app/src/main/res/layout/detail_cardview.xml
@@ -26,14 +26,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:layout_marginBottom="3dp"
                 android:textColor="#000000"
                 android:layout_marginTop="3dp"/>
 
             <TextView
                 android:id="@+id/detail_text_2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp" />
 
             <TextView
                 android:id="@+id/detail_text_3"
