--- a/app/src/main/res/layout/header_base.xml
+++ b/app/src/main/res/layout/header_base.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    android:background="@color/colorPrimary">
+    android:background="?attr/color_bar">
 
     <ImageView
         android:id="@+id/back"
