--- a/app/src/main/res/drawable/bottom_navigation_selector.xml
+++ b/app/src/main/res/drawable/bottom_navigation_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorPrimary" android:state_checked="true" />
+    <item android:color="?attr/color_bottomNav" android:state_checked="true" />
     <item android:color="@color/tab_unchecked" android:state_checked="false" />
 
 </selector>
