--- a/app/src/main/res/layout/fragment_day_class.xml
+++ b/app/src/main/res/layout/fragment_day_class.xml
@@ -17,7 +17,7 @@
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="#902ABFFD">
+        android:background="?attr/color_bar">
 
         <TextView
             android:id="@+id/day_text"
