--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -28,7 +28,7 @@
             android:id="@+id/add_status"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/colorPrimary" />
+            android:background="?attr/color_bar" />
 
         <include
             android:id="@+id/func_base_constraintLayout"
