--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -10,7 +10,7 @@
         android:id="@+id/add_status"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#902ABFFD" />
+        android:background="?attr/color_bar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/title_bar"
