--- a/app/src/main/res/layout/activity_planned_courses.xml
+++ b/app/src/main/res/layout/activity_planned_courses.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="?attr/color_bar"
         android:orientation="vertical">
 
         <androidx.constraintlayout.widget.Guideline
