--- a/app/src/main/res/layout/activity_personalized.xml
+++ b/app/src/main/res/layout/activity_personalized.xml
@@ -292,7 +292,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="标题栏：(默认为10)" />
+                        android:text="标题栏/底部导航栏：(默认为10)" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
