--- a/app/src/main/res/layout/activity_more_url.xml
+++ b/app/src/main/res/layout/activity_more_url.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".moreFun.MoreUrlActivity">
+
+    <View
+        android:id="@+id/add_status"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="?attr/color_bar" />
 
     <include
         android:id="@+id/func_base_constraintLayout"
