--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -235,6 +235,21 @@
                             android:layout_gravity="center"
                             android:layout_weight="1">
 
+                            <ImageView
+                                android:id="@+id/more_selected_course"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:layout_gravity="top|center"
+                                android:src="@drawable/ic_selected_course"
+                                tools:ignore="ContentDescription" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="bottom|center"
+                                android:text="@string/moreFun_selected_course"
+                                android:textSize="13sp" />
+
                         </FrameLayout>
 
                         <FrameLayout
